# ugene

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE.3rd_party.txt  README.md  build.txt  ini  ini2  ini3  ugene.pri  ugene.pro
src/corelibs/U2Script/: CMakeLists.txt  U2Script.pri
src/corelibs/U2Script/src/: CommonDbi.cpp  CommonDbi.h  FormatDetection.cpp  FormatDetection.h  SchemeHandle.cpp  SchemeHandle.h  SchemeWrapper.cpp  SchemeWrapper.h  TextConversionUtils.cpp  TextConversionUtils.h  U2Script.cpp  U2Script.h  UgeneContextWrapper.cpp  UgeneContextWrapper.h  WorkflowElementFacade.cpp  WorkflowElementFacade.h  globals.cpp  globals.h
src/corelibs/U2Script/src/js/: ActorWrap.cpp  ActorWrap.h  DebugStatusWrap.cpp  DebugStatusWrap.h  JsContext.cpp  JsContext.h  JsScheduler.cpp  JsScheduler.h  NodeApiUtils.cpp  NodeApiUtils.h
src/corelibs/U2Script/src/python/: serializer.py  setup.py  u2py.py  u2py_internals.c
src/corelibs/U2Script/transl/: english.ts  russian.ts  turkish.ts
src/libs_3rdparty/QSpec/: CMakeLists.txt  QSpec.pri  QSpec.pro
src/libs_3rdparty/QSpec/examples/calculator/: calcguitests.cpp  calcguitests.h  calculator.cpp
src/libs_3rdparty/QSpec/src/: GTGlobals.cpp  GTGlobals.h
src/libs_3rdparty/QSpec/src/base_dialogs/: ColorDialogFiller.cpp  ColorDialogFiller.h  DefaultDialogFiller.cpp  DefaultDialogFiller.h  FontDialogFiller.cpp  FontDialogFiller.h  MessageBoxFiller.cpp  MessageBoxFiller.h
src/libs_3rdparty/QSpec/src/core/: CustomScenario.cpp  CustomScenario.h  GUITest.cpp  GUITest.h  GUITestBase.cpp  GUITestBase.h  GUITestOpStatus.h  GUITestsLauncher.cpp  GUITestsLauncher.h  MainThreadRunnable.cpp  MainThreadRunnable.h  MainThreadTimer.cpp  MainThreadTimer.h  TestThread.cpp  TestThread.h  global.h
src/libs_3rdparty/QSpec/src/drivers/: GTKeyboardDriver.cpp  GTKeyboardDriver.h  GTKeyboardDriverLinux.cpp  GTKeyboardDriverMac.cpp  GTKeyboardDriverWindows.cpp  GTMouseDriver.cpp  GTMouseDriver.h  GTMouseDriverLinux.cpp  GTMouseDriverMac.cpp  GTMouseDriverWindows.cpp
src/libs_3rdparty/QSpec/src/primitives/: GTAction.cpp  GTAction.h  GTCheckBox.cpp  GTCheckBox.h  GTComboBox.cpp  GTComboBox.h  GTDoubleSpinBox.cpp  GTDoubleSpinBox.h  GTGroupBox.cpp  GTGroupBox.h  GTLabel.cpp  GTLabel.h  GTLineEdit.cpp  GTLineEdit.h  GTListWidget.cpp  GTListWidget.h  GTMainWindow.cpp  GTMainWindow.h  GTMenu.cpp  GTMenu.h  GTMenuBar.cpp  GTMenuBar.h  GTPlainTextEdit.cpp  GTPlainTextEdit.h  GTRadioButton.cpp  GTRadioButton.h  GTScrollBar.cpp  GTScrollBar.h  GTSlider.cpp  GTSlider.h  GTSpinBox.cpp  GTSpinBox.h  GTSplitter.cpp  GTSplitter.h  GTTabBar.cpp  GTTabBar.h  GTTabWidget.cpp  (+21 more)
src/libs_3rdparty/QSpec/testApp/: EventFilter.h  EventRecorderWidget.h  driversGuiTests.cpp  driversGuiTests.h  mainwindow.h  systemTests.cpp  systemTests.h
src/libs_3rdparty/zlib/: CMakeLists.txt  zlib.pri  zlib.pro
src/libs_3rdparty/zlib/src/: gzlib.c  gzwrite.c  infback.c  inflate.c
src/plugins_checker/: CMakeLists.txt  plugins_checker.pri
src/plugins_checker/src/: Main.cpp
src/ugenem/: CMakeLists.txt  ugenem.pro
src/ugenem/src/: DetectWin10.cpp  DetectWin10.h  SendReportDialog.cpp  SendReportDialog.h  Utils.cpp  Utils.h  main.cpp
src/ugeneui/: CMakeLists.txt  ugeneui.pri  ugeneui.pro  ugeneui.qrc
src/ugeneui/html/: version_news.html  version_news_en.html  version_news_ru.html  welcome_page.css  welcome_page.html  welcome_page_webengine.html  welcome_page_webengine_qt542.html
src/ugeneui/images/: ugeneui.icns
src/ugeneui/javascript/: Common.js  WelcomePage.js  WellcomePage.js
src/ugeneui/src/: Main.cpp
src/ugeneui/src/app_settings/: AppSettingsDialog.ui  AppSettingsDialogController.cpp  AppSettingsDialogController.h  AppSettingsDialogTree.h  AppSettingsGUIImpl.cpp  AppSettingsGUIImpl.h  ResetSettingsMac.h  ResetSettingsMac.mm
src/ugeneui/src/main_window/: AboutDialogController.cpp  AboutDialogController.h  CheckUpdatesTask.cpp  CheckUpdatesTask.h  CreateDesktopShortcutTask.cpp  CreateDesktopShortcutTask.h  DockManagerImpl.cpp  DockManagerImpl.h  DockWidgetPainter.cpp  DockWidgetPainter.h  MDIManagerImpl.cpp  MDIManagerImpl.h  MainWindowImpl.cpp  MainWindowImpl.h  MenuManager.cpp  MenuManager.h  ProxyStyle.cpp  ProxyStyle.h  ShutdownTask.cpp  ShutdownTask.h  SplashScreen.cpp  SplashScreen.h  TmpDirChangeDialogController.cpp  TmpDirChangeDialogController.h  ToolBarManager.cpp  ToolBarManager.h
src/ugeneui/src/plugin_viewer/: PluginViewerController.cpp  PluginViewerController.h  PluginViewerImpl.cpp  PluginViewerImpl.h
src/ugeneui/src/project_support/: CreateNewProjectWidget.ui  DocumentFormatSelectorController.cpp  DocumentFormatSelectorController.h  DocumentFormatSelectorDialog.ui  DocumentProviderSelectorController.cpp  DocumentProviderSelectorController.h  DocumentReadingModeSelectorController.cpp  DocumentReadingModeSelectorController.h  ExportProjectDialogController.cpp  ExportProjectDialogController.h  MultipleDocumentsReadingModeSelectorController.cpp  MultipleDocumentsReadingModeSelectorController.h  ProjectImpl.cpp  ProjectImpl.h  ProjectLoaderImpl.cpp  ProjectLoaderImpl.h  ProjectServiceImpl.cpp  ProjectServiceImpl.h  ProjectTasksGui.cpp  ProjectTasksGui.h
src/ugeneui/src/project_view/: BuiltInObjectViews.cpp  ProjectViewImpl.cpp  ProjectViewImpl.h  ProjectViewSearchBox.cpp  ProjectViewSearchBox.h  ProjectViewWidget.ui
src/ugeneui/src/shtirlitz/: Shtirlitz.cpp  Shtirlitz.h  StatisticalReport.ui  StatisticalReportController.cpp  StatisticalReportController.h
src/ugeneui/src/task_view/: TaskStatusBar.cpp  TaskStatusBar.h  TaskViewController.cpp  TaskViewController.h
src/ugeneui/src/update/: UgeneUpdater.cpp  UgeneUpdater.h
src/ugeneui/src/utils/: MultilingualHtmlView.cpp  MultilingualHtmlView.h
src/ugeneui/src/welcome_page/: WelcomePageController.cpp  WelcomePageController.h  WelcomePageJsAgent.cpp  WelcomePageJsAgent.h  WelcomePageMdi.cpp  WelcomePageMdi.h  WelcomePageMdiController.cpp  WelcomePageMdiController.h  WelcomePageWidget.cpp  WelcomePageWidget.h
src/ugeneui/transl/: english.ts  russian.ts  turkish.ts
(+13990 files in other folders)
